# anth-hackathon26

./: .env.example  .gitignore  ARCHITECTURE.md  CHALLENGE.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 19a51d67356f_alert_and_alert_delivery.py  3b9aea834a80_outbound_message_sighting.py  44ee164ec4de_hot_path_indices.py  617e4bc1dab1_identity_tables.py  (+7 more)
db/: init.sql
deploy/: README.md  boxd-up.sh
mobileapp/: README.md
scripts/: smoke_real_agent.py
server/: audiences.py  config.py  dashboard.py  main.py  operators.py  schemas.py  seed.py  store.py
tests/: conftest.py  test_agent_worker.py  test_api_audiences.py  test_api_dashboard.py  test_api_incidents.py  test_api_operator_actions.py  test_api_operators.py  test_api_regions.py  test_api_sim_inbound.py  test_api_sim_seed.py  test_api_suggestions_and_feed.py  test_api_ws_stream.py  test_auth_ngo.py  test_db_engine.py  test_e2e_foundation.py  test_e2e_inbound_pipeline.py  test_eventbus_postgres.py  test_health.py  test_heartbeat.py  test_indices.py  test_models_alerts.py  test_models_base.py  test_models_decisions.py  test_models_identity.py  test_models_knowledge.py  test_models_messages.py  test_models_outbound.py  test_models_trust.py  test_narrate.py  test_registry_and_auth.py  test_sim_replay.py  test_sim_sms.py  test_smoke.py  test_triage_worker.py  test_worker_lifecycle.py
video-submission/: package-lock.json  package.json
visuals/: README.md
web/: index.html  package-lock.json  package.json  tailwind.config.js
(+151 files in other folders)
