[project]
name = "ngo-hub"
version = "0.1.0"
description = "NGO Hub UI scaffold for warzone amber-alert / civilian-reporting system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
